some tweaks + docs